# audio-playground

./: .clang-format  .gitignore  CMakeLists.txt  DEFINE.md  LEARN.md
docs/: ATOM.md  CHORUS_BOSS_CE2.md  UNIT.md  YAML_PARSER.md
inc/atom/: dsp_atoms.h  dsp_types.h
inc/runtime/: atom_registry.h  runtime.h
inc/unit/: chorus.h  sustainer.h
inc/yaml/: arena.h  error.h  lexer.h  loader.h  node.h  parser.h  token.h  unit.h
src/: live.c  test_runtime.c
src/atom/: amplitude_accumulate.c  amplitude_add.c  amplitude_clip_hard.c  amplitude_clip_soft.c  amplitude_divide.c  amplitude_multiply.c  amplitude_normalize.c  amplitude_smooth.c  amplitude_subtract.c  delay_fractional.c  delay_line.c  delay_tap_feedback.c  delay_tap_feedforward.c  delay_unit.c  detect_autocorrelate.c  detect_envelope.c  detect_peak.c  detect_rms.c  detect_slope.c  detect_threshold.c  detect_zero_crossing.c  filter_allpass.c  filter_biquad.c  filter_comb_fb.c  filter_comb_ff.c  filter_dc_block.c  filter_differentiate.c  filter_fir.c  filter_integrate.c  freq_fft.c  freq_ifft.c  freq_multiply.c  freq_overlap_add.c  freq_overlap_save.c  freq_window.c  generation_dc.c  generation_envelope.c  generation_impulse.c  generation_lfo.c  generation_noise.c  (+24 more)
src/runtime/: atom_register.c  runtime.c
src/unit/: chorus.c  sustainer.c
src/yaml/: arena.c  error_and_node.c  lexer.c  loader.c  (+1 more)
units/: analog_delay.unit.yaml  cave_reverb.unit.yaml  chorus.unit.yaml  church_reverb.unit.yaml  hall_reverb.unit.yaml  overdrive.unit.yaml  shimmer_reverb.unit.yaml  spring_reverb.unit.yaml  sustainer.unit.yaml
(+15 files in other folders)
